--- a/index.html
+++ b/index.html
@@ -280,6 +280,11 @@
     </section>
 
     <section id="team" class="wrapper">
+      <div class="container">
+        <h1>
+          <span>Our Team</span>
+        </h1>
+      </div>
       <div
         style="height: 50vh"
         class="container box"
