--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="#team" class="nav_menu_link">team</a>
             </li>
             <li class="nav_menu_item">
-              <a href="#" class="nav_menu_link">contact</a>
+              <a href="#contact" class="nav_menu_link">contact</a>
             </li>
           </ul>
         </div>
@@ -281,7 +281,7 @@
 
     <section id="team" class="wrapper">
       <div class="container">
-        <h1>
+        <h1 class="main-heading">
           <span>Our Team</span>
         </h1>
       </div>
@@ -378,12 +378,12 @@
           <ul class="social-media-list">
             <li>
               <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-github" aria-hidden="true"></i
+                <i class="fa fa-chrome" aria-hidden="true"></i
               ></a>
             </li>
             <li>
               <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-codepen" aria-hidden="true"></i
+                <i class="fa fa-facebook" aria-hidden="true"></i
               ></a>
             </li>
             <li>
