--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
       <!-- ==== NAVBAR ==== -->
       <nav class="nav">
         <div class="logo">
-          <img style="width: 30%" src="img\favicon.png" alt="" />
-          <h2>CSIS</h2>
+          <a class="logo" href="/"
+            ><img style="width: 30%" src="img\favicon.png" alt="" />
+            <h2>CSIS</h2>
+          </a>
         </div>
 
         <div class="nav_menu" id="nav_menu">
