--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               <i class="fa fa-envelope fa-2x"
                 ><span class="contact-text gmail"
                   ><a href="mailto:#" title="Send me an email"
-                    >chandigarhuniversity@gmail.com</a
+                    >CSIS_CU@gmail.com</a
                   ></span
                 ></i
               >
