--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <div class="grid-cols-2">
           <div class="grid-item-1">
             <h1 class="main-heading">
-              Welcome to <span>CSIS 2023</span>
+              Welcome to <span>CSIS 2023</span>:
               <br />
               Unleashing the Power of Technology
             </h1>
             <p class="info-text">
-              The computer society india symposium will be hosted by
-              <strong style="color: red">chandigarh university</strong>, by the
-              IEEE Computer Society CU student chapter.
+              "The Computer Society India Symposium 2023, will be hosted by the
+              IEEE Computer Society CU Student Chapter at
+              <strong style="color: red">Chandigarh University</strong>."
             </p>
 
             <div class="btn_wrapper">
@@ -115,13 +115,17 @@
       <div class="container" data-aos="fade-up" data-aos-duration="1000">
         <h1 class="main-heading">About CSIS 2023</h1>
         <p class="info-text">
-          We are thrilled to announce that this year, Chandigarh University has
-          the honor and privilege to host the prestigious Computer Society India
-          Symposium (CSIS) 2023. CSIS is a remarkable convergence of technology
-          enthusiasts, industry experts, and creative minds, all driven by a
-          shared passion for the transformative power of technology. Join us as
-          we delve into a series of captivating events designed to inspire,
-          educate, and ignite innovation.
+          We are thrilled to announce that this year,
+          <strong style="color: red">Chandigarh University</strong> has the
+          honor and privilege to host the prestigious
+          <strong style="color: #eab933"
+            >Computer Society India Symposium (CSIS) 2023.</strong
+          >
+          CSIS is a remarkable convergence of technology enthusiasts, industry
+          experts, and creative minds, all driven by a shared passion for the
+          transformative power of technology. Join us as we delve into a series
+          of captivating events designed to inspire, educate, and ignite
+          innovation.
         </p>
         <div class="info-text box">
           <p>
@@ -263,7 +267,7 @@
             <div class="featured_info">
               <span>Hands-On Workshop</span>
               <p>
-                : Dive deep into the heart of technology through immersive
+                Dive deep into the heart of technology through immersive
                 workshops, where practical skills and knowledge are imparted by
                 seasoned professionals.
               </p>
@@ -276,7 +280,8 @@
             connect with like-minded individuals, discover the forefront of
             technology, and be inspired to shape the future. Get ready to
             unleash the power of technology and be a part of this extraordinary
-            journey at Chandigarh University
+            journey at
+            <strong style="color: red">Chandigarh University!</strong>
           </p>
         </div>
       </div>
