--- a/index.html
+++ b/index.html
@@ -300,114 +300,120 @@
         data-aos-duration="1000"></div>
     </section>
 
-    <section id="contact" data-aos="fade-up" data-aos-duration="1000">
-      <h1 class="section-header">Contact</h1>
+    <section
+      id="contact"
+      class="wrapper"
+      data-aos="fade-up"
+      data-aos-duration="1000">
+      <div class="container">
+        <h1 class="section-header">Contact</h1>
 
-      <div class="contact-wrapper">
-        <!-- Left contact page -->
-        <form id="contact-form" class="form-horizontal" role="form">
-          <div class="form-group">
-            <div class="col-sm-12">
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                placeholder="NAME"
-                name="name"
-                value=""
-                required />
+        <div class="contact-wrapper">
+          <!-- Left contact page -->
+          <form id="contact-form" class="form-horizontal" role="form">
+            <div class="form-group">
+              <div class="col-sm-12">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="NAME"
+                  name="name"
+                  value=""
+                  required />
+              </div>
             </div>
+
+            <div class="form-group">
+              <div class="col-sm-12">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="EMAIL"
+                  name="email"
+                  value=""
+                  required />
+              </div>
+            </div>
+
+            <textarea
+              class="form-control"
+              rows="10"
+              placeholder="MESSAGE"
+              name="message"
+              required></textarea>
+
+            <button
+              class="btn btn-primary send-button"
+              id="submit"
+              type="submit"
+              value="SEND">
+              <div class="alt-send-button">
+                <i class="fa fa-paper-plane"></i
+                ><span class="send-text">SEND</span>
+              </div>
+            </button>
+          </form>
+
+          <!-- Left contact page -->
+
+          <div class="direct-contact-container">
+            <ul class="contact-list">
+              <li class="list-item">
+                <i class="fa fa-map-marker fa-2x"
+                  ><span class="contact-text place">Mohali, Punjab</span></i
+                >
+              </li>
+
+              <li class="list-item">
+                <i class="fa fa-phone fa-2x"
+                  ><span class="contact-text phone"
+                    ><a href="tel:1-212-555-5555" title="Give me a call"
+                      >0160 305 1003</a
+                    ></span
+                  ></i
+                >
+              </li>
+
+              <li class="list-item">
+                <i class="fa fa-envelope fa-2x"
+                  ><span class="contact-text gmail"
+                    ><a href="mailto:#" title="Send me an email"
+                      >CSIS_CU@gmail.com</a
+                    ></span
+                  ></i
+                >
+              </li>
+            </ul>
+
+            <hr />
+            <ul class="social-media-list">
+              <li>
+                <a href="#" target="_blank" class="contact-icon">
+                  <i class="fa fa-chrome" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="contact-icon">
+                  <i class="fa fa-facebook" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="contact-icon">
+                  <i class="fa fa-twitter" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="contact-icon">
+                  <i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
+              </li>
+            </ul>
+            <hr />
+
+            <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
           </div>
-
-          <div class="form-group">
-            <div class="col-sm-12">
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                placeholder="EMAIL"
-                name="email"
-                value=""
-                required />
-            </div>
-          </div>
-
-          <textarea
-            class="form-control"
-            rows="10"
-            placeholder="MESSAGE"
-            name="message"
-            required></textarea>
-
-          <button
-            class="btn btn-primary send-button"
-            id="submit"
-            type="submit"
-            value="SEND">
-            <div class="alt-send-button">
-              <i class="fa fa-paper-plane"></i
-              ><span class="send-text">SEND</span>
-            </div>
-          </button>
-        </form>
-
-        <!-- Left contact page -->
-
-        <div class="direct-contact-container">
-          <ul class="contact-list">
-            <li class="list-item">
-              <i class="fa fa-map-marker fa-2x"
-                ><span class="contact-text place">Mohali, Punjab</span></i
-              >
-            </li>
-
-            <li class="list-item">
-              <i class="fa fa-phone fa-2x"
-                ><span class="contact-text phone"
-                  ><a href="tel:1-212-555-5555" title="Give me a call"
-                    >0160 305 1003</a
-                  ></span
-                ></i
-              >
-            </li>
-
-            <li class="list-item">
-              <i class="fa fa-envelope fa-2x"
-                ><span class="contact-text gmail"
-                  ><a href="mailto:#" title="Send me an email"
-                    >CSIS_CU@gmail.com</a
-                  ></span
-                ></i
-              >
-            </li>
-          </ul>
-
-          <hr />
-          <ul class="social-media-list">
-            <li>
-              <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-chrome" aria-hidden="true"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-facebook" aria-hidden="true"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-twitter" aria-hidden="true"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-instagram" aria-hidden="true"></i
-              ></a>
-            </li>
-          </ul>
-          <hr />
-
-          <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
         </div>
       </div>
     </section>
