--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       <nav class="nav">
         <div class="logo">
           <a class="logo" href="/"
-            ><img style="width: 30%" src="img\favicon.png" alt="" />
-            <h2>CSIS</h2>
+            ><img style="width: 30%" src="img/csis.png" alt="" />
           </a>
         </div>
 
@@ -297,7 +296,26 @@
         style="height: 50vh"
         class="container box"
         data-aos="fade-up"
-        data-aos-duration="1000"></div>
+        data-aos-duration="1000">
+        <div class="team">
+          <div class="teamMem">
+            <img src="" alt="Member Image" />
+            <h2>Name</h2>
+          </div>
+          <div class="teamMem">
+            <img src="" alt="Member Image" />
+            <h2>Name</h2>
+          </div>
+          <div class="teamMem">
+            <img src="" alt="Member Image" />
+            <h2>Name</h2>
+          </div>
+          <div class="teamMem">
+            <img src="" alt="Member Image" />
+            <h2>Name</h2>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section
@@ -350,70 +368,12 @@
               type="submit"
               value="SEND">
               <div class="alt-send-button">
-                <i class="fa fa-paper-plane"></i
-                ><span class="send-text">SEND</span>
+                <i class="fa fa-paper-plane"></i>
+                <span class="send-text">SEND</span>
               </div>
             </button>
           </form>
-
           <!-- Left contact page -->
-
-          <div class="direct-contact-container">
-            <ul class="contact-list">
-              <li class="list-item">
-                <i class="fa fa-map-marker fa-2x"
-                  ><span class="contact-text place">Mohali, Punjab</span></i
-                >
-              </li>
-
-              <li class="list-item">
-                <i class="fa fa-phone fa-2x"
-                  ><span class="contact-text phone"
-                    ><a href="tel:1-212-555-5555" title="Give me a call"
-                      >0160 305 1003</a
-                    ></span
-                  ></i
-                >
-              </li>
-
-              <li class="list-item">
-                <i class="fa fa-envelope fa-2x"
-                  ><span class="contact-text gmail"
-                    ><a href="mailto:#" title="Send me an email"
-                      >CSIS_CU@gmail.com</a
-                    ></span
-                  ></i
-                >
-              </li>
-            </ul>
-
-            <hr />
-            <ul class="social-media-list">
-              <li>
-                <a href="#" target="_blank" class="contact-icon">
-                  <i class="fa fa-chrome" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#" target="_blank" class="contact-icon">
-                  <i class="fa fa-facebook" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#" target="_blank" class="contact-icon">
-                  <i class="fa fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#" target="_blank" class="contact-icon">
-                  <i class="fa fa-instagram" aria-hidden="true"></i
-                ></a>
-              </li>
-            </ul>
-            <hr />
-
-            <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
-          </div>
         </div>
       </div>
     </section>
