--- a/index.html
+++ b/index.html
@@ -374,10 +374,71 @@
             </button>
           </form>
           <!-- Left contact page -->
+          <div class="direct-contact-container">
+            <div class="location">
+              <ul class="contact-list">
+                <li class="list-item">
+                  <i class="fa fa-map-marker fa-2x"
+                    ><span class="contact-text place">Mohali, Punjab</span></i
+                  >
+                </li>
+
+                <li class="list-item">
+                  <i class="fa fa-phone fa-2x"
+                    ><span class="contact-text phone"
+                      ><a href="tel:+91-212-555-5555" title="Give me a call"
+                        >(212) 555-2368</a
+                      ></span
+                    ></i
+                  >
+                </li>
+
+                <li class="list-item">
+                  <i class="fa fa-envelope fa-2x"
+                    ><span class="contact-text gmail"
+                      ><a href="mailto:#" title="Send me an email"
+                        >CU_CSIS@gmail.com</a
+                      ></span
+                    ></i
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="socialLinks">
+              <hr />
+              <ul class="social-media-list">
+                <li>
+                  <a href="#" target="_blank" class="contact-icon">
+                    <i class="fa fa-github" aria-hidden="true"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" class="contact-icon">
+                    <i class="fa fa-codepen" aria-hidden="true"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" class="contact-icon">
+                    <i class="fa fa-twitter" aria-hidden="true"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" class="contact-icon">
+                    <i class="fa fa-instagram" aria-hidden="true"></i
+                  ></a>
+                </li>
+              </ul>
+              <hr />
+            </div>
+
+            <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
+          </div>
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <div class="cr-con">Copyright &copy; 2023 | Made by Brogrammers</div>
+    </footer>
     <!-- ==== Footer -->
     <script>
       document
