--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           <div class="grid-item-2">
             <div class="team_img_wrapper">
-              <img src="./img/team.svg" alt="team-img" />
+              <img src="./img/hero.png" alt="team-img" />
             </div>
           </div>
         </div>
