--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       </div>
     </section>
     <footer>
-      <div class="cr-con">Copyright &copy; 2023 | Made by Brogrammers</div>
+      <!-- <div class="cr-con">Copyright &copy; 2023 | Made by Brogrammers</div> -->
     </footer>
     <!-- ==== Footer -->
     <script>
