--- a/index.html
+++ b/index.html
@@ -436,9 +436,7 @@
         </div>
       </div>
     </section>
-    <footer>
-      <!-- <div class="cr-con">Copyright &copy; 2023 | Made by Brogrammers</div> -->
-    </footer>
+    <footer></footer>
     <!-- ==== Footer -->
     <script>
       document
